[gd_scene load_steps=2 format=2]

[ext_resource path="res://src/CloseUpPlant/Seed/Seed.gd" type="Script" id=8]

[node name="Seed" type="Node2D"]
scale = Vector2( 2, 2 )
script = ExtResource( 8 )

[node name="Fruit_Color_1" type="Polygon2D" parent="."]
position = Vector2( -7, -10 )
color = Color( 0.619608, 0.619608, 0.619608, 1 )
texture_scale = Vector2( 50, 50 )
polygon = PoolVector2Array( 0, 6, 2, 6, 2, 4, 4, 4, 4, 2, 6, 2, 6, 6, 4, 6, 4, 8, 0, 8 )

[node name="Shadow" type="Polygon2D" parent="Fruit_Color_1"]
color = Color( 0.458824, 0.458824, 0.458824, 1 )
polygon = PoolVector2Array( 0, 6, 2, 6, 2, 8, 0, 8 )

[node name="Mid_Color_1" type="Polygon2D" parent="."]
position = Vector2( -12, -8 )
color = Color( 0.619608, 0.619608, 0.619608, 1 )
polygon = PoolVector2Array( 5, 6, 5, 8, 7, 8, 7, 8, 9, 8, 11, 6, 11, 4, 13, 4, 13, 2, 15, 2, 15, 0, 13, 0, 11, 0, 11, 2, 11, 4, 9, 4, 9, 6, 7, 6 )

[node name="Shadow" type="Polygon2D" parent="Mid_Color_1"]
color = Color( 0.458824, 0.458824, 0.458824, 1 )
polygon = PoolVector2Array( 5, 6, 5, 8, 7, 8, 7, 6 )

[node name="Light" type="Polygon2D" parent="Mid_Color_1"]
color = Color( 0.827451, 0.827451, 0.827451, 1 )
polygon = PoolVector2Array( 15, 0, 15, 2, 13, 2, 11, 2, 11, 0, 13, 0 )

[node name="Flower_Color_1" type="Polygon2D" parent="."]
position = Vector2( -12, -8 )
color = Color( 0.619608, 0.619608, 0.619608, 1 )
polygon = PoolVector2Array( 5, 12, 5, 10, 5, 8, 7, 8, 9, 8, 9, 6, 11, 6, 11, 4, 13, 4, 13, 2, 15, 2, 17, 2, 17, 4, 15, 4, 13, 4, 13, 6, 11, 6, 11, 8, 9, 8, 9, 10, 7, 10, 7, 12 )

[node name="Shadow" type="Polygon2D" parent="Flower_Color_1"]
color = Color( 0.458824, 0.458824, 0.458824, 1 )
polygon = PoolVector2Array( 5, 8, 5, 10, 5, 12, 7, 12, 7, 10, 7, 8 )

[node name="Light" type="Polygon2D" parent="Flower_Color_1"]
color = Color( 0.827451, 0.827451, 0.827451, 1 )
polygon = PoolVector2Array( 13, 2, 13, 4, 15, 4, 17, 4, 17, 2, 15, 2 )

[node name="Mid_Color_2" type="Polygon2D" parent="."]
position = Vector2( -12, -8 )
color = Color( 0.619608, 0.619608, 0.619608, 1 )
polygon = PoolVector2Array( 7, 12, 7, 10, 9, 10, 9, 8, 11, 8, 11, 6, 13, 6, 13, 4, 15, 4, 17, 4, 17, 6, 15, 6, 15, 8, 13, 8, 13, 10, 11, 10, 11, 12, 9, 12 )

[node name="Shadow" type="Polygon2D" parent="Mid_Color_2"]
color = Color( 0.458824, 0.458824, 0.458824, 1 )
polygon = PoolVector2Array( 7, 10, 7, 12, 9, 12, 9, 10 )

[node name="Light" type="Polygon2D" parent="Mid_Color_2"]
color = Color( 0.827451, 0.827451, 0.827451, 1 )
polygon = PoolVector2Array( 17, 4, 15, 4, 15, 6, 17, 6 )

[node name="Fruit_Color_2" type="Polygon2D" parent="."]
position = Vector2( -12, -8 )
color = Color( 0.619608, 0.619608, 0.619608, 1 )
polygon = PoolVector2Array( 19, 4, 17, 4, 17, 6, 15, 6, 15, 8, 13, 8, 13, 10, 11, 10, 11, 12, 9, 12, 7, 12, 7, 14, 9, 14, 11, 14, 13, 12, 15, 10, 17, 8, 19, 8 )

[node name="Shadow" type="Polygon2D" parent="Fruit_Color_2"]
color = Color( 0.458824, 0.458824, 0.458824, 1 )
polygon = PoolVector2Array( 7, 12, 7, 14, 9, 14, 11, 14, 11, 12, 9, 12 )

[node name="Light" type="Polygon2D" parent="Fruit_Color_2"]
color = Color( 0.827451, 0.827451, 0.827451, 1 )
polygon = PoolVector2Array( 19, 4, 17, 4, 17, 6, 17, 8, 19, 8, 19, 6 )

[node name="Mid_Color_3" type="Polygon2D" parent="."]
position = Vector2( -12, -8 )
color = Color( 0.619608, 0.619608, 0.619608, 1 )
polygon = PoolVector2Array( 9, 14, 9, 16, 11, 16, 13, 16, 13, 14, 13, 12, 15, 12, 17, 12, 17, 10, 19, 10, 19, 8, 17, 8, 15, 8, 15, 10, 13, 10, 13, 12, 11, 12, 11, 14 )

[node name="Shadow" type="Polygon2D" parent="Mid_Color_3"]
color = Color( 0.458824, 0.458824, 0.458824, 1 )
polygon = PoolVector2Array( 9, 14, 9, 16, 11, 16, 13, 16, 13, 14, 11, 14 )

[node name="Flower_Color_2" type="Polygon2D" parent="."]
position = Vector2( -12, -8 )
color = Color( 0.619608, 0.619608, 0.619608, 1 )
polygon = PoolVector2Array( 19, 10, 19, 12, 17, 12, 17, 14, 15, 14, 15, 16, 13, 16, 13, 14, 13, 12, 15, 12, 15, 10, 17, 10 )
